--- a/app/src/main/res/layout/acivity_note.xml
+++ b/app/src/main/res/layout/acivity_note.xml
@@ -31,11 +31,14 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Заголовок"
+            android:layout_marginTop="60dp"
+            android:padding="25dp"
+            android:orientation="vertical"
             android:textColorHint="@android:color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/titleEt"
+                android:hint="Заголовок"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"/>
@@ -47,6 +50,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@null"
-            android:hint="Текст заметки"/>
+            android:hint="Текст заметки" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
